[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vimwiki2html"
dynamic = ["version"]
authors = [
    {name = "Roman Dobosz", email = "gryf73@gmail.com"}
]
license = {text = "MIT"}
license_files = ["LICENSE"]
description = "Parse and generate html out of vimwiki source files"
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["vimwiki", "wiki", "parser", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [ ]

[project.urls]
Homepage = "https://github.com/gryf/vimwiki2html"

[project.scripts]
vw2html = "vw2html.cli:main"

[tool.setuptools]
packages = ["vw2html"]

[tool.setuptools.dynamic]
version = {attr = "vw2html.__version__"}

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff.lint]
select = ["ALL", 'E']
ignore = ["Q", "ANN", "D", "PTH", "PT", "TD003", "FIX001", "FIX002", "ERA001"]
#ignore = ["Q", "COM812", "ANN", "D", "PTH"]
